# codex-as-mcp

./: .gitignore  .mcp.json  README.cn.md  README.md  README.zh-CN.md  pyproject.toml
src/codex_as_mcp/: server.py
