[project]
name = "codex-as-mcp"
version = "0.1.0"
description = "MCP server that provides access to codex CLI for code generation and review"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "codex", "code-generation", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.12.4",
]

[project.scripts]
codex-as-mcp = "codex_as_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/codex-as-mcp"
Repository = "https://github.com/yourusername/codex-as-mcp"
Issues = "https://github.com/yourusername/codex-as-mcp/issues"
